# cpplib-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.name}}/: CMakeLists.txt  LICENSE  {{cookiecutter.name|title}}Config.cmake
{{cookiecutter.name}}/examples/: CMakeLists.txt  example.cc
{{cookiecutter.name}}/lib/: CMakeLists.txt  internal_sample.cc  internal_sample.hh  sample.cc
{{cookiecutter.name}}/lib/include/: sample.hh
{{cookiecutter.name}}/test/: CMakeLists.txt  samples.cc
